tests/NormalTests/paczka1/fuzzy1/27470115.err
Error in line 1: vG8 A556 ­4,4
Error in line 15: pB9TZrMZ A894 372,12
Error in line 22: ssNqbf A556 66,6
Error in line 28: B94IP A894 6,6
Error in line 27: ssNqbf A333 37,7
Error in line 16: vG8 A556 159,1
Error in line 31: B94IP A556 114,2
